[gd_scene load_steps=4 format=3 uid="uid://d1coj81estuq0"]

[ext_resource type="Script" path="res://src/ui/menus/event_dialog.gd" id="1_bsol1"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="1_fpfxd"]
[ext_resource type="StyleBox" uid="uid://bhfo1noi80203" path="res://assets/panel_opaque.tres" id="3_k5p50"]

[node name="EventDialog" type="Node2D"]
script = ExtResource("1_bsol1")

[node name="Center" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(1720, 880)
layout_mode = 2
theme = ExtResource("1_fpfxd")
theme_override_styles/panel = ExtResource("3_k5p50")

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Great City of Deviro"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Center/Panel/VBox/HBox"]
custom_minimum_size = Vector2(1100, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="FlavorText" type="RichTextLabel" parent="Center/Panel/VBox/HBox/Margin"]
custom_minimum_size = Vector2(1100, 0)
layout_mode = 2
bbcode_enabled = true
text = "As your struggle agains the Blight grows more difficult, you attempt a divination to locate any sources of power that might help make you stronger. Your scrying leads you to a ruined, overgrown city in the heart of the forest.\\n
	At the center of the city is a huge pyramid. Nestled at its peak is a complex mechanism of gears, metal, mirrors and gemstones. Once, this was used to help mage circles cast powerful spells. Now, most of its parts have been pilfered and stolen.\\n
	There remain a handful of gemstones left untouched in the array. You can faintly feel remnants of elemental energy emanating from each one."

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option1" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
text = "Option 1"

[node name="Option2" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
text = "Option 2"

[node name="Option3" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Option 3"

[node name="Option4" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Option 4"

[node name="Option5" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Option 5"

[node name="Confirm" type="Button" parent="Center/Panel/VBox/HBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
text = "Confirm"

[connection signal="pressed" from="Center/Panel/VBox/HBox/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
